卖家后端开发

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,29 @@
 			<version>1.0.29</version>
 		</dependency>
 
+		<!--json 转换-->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
+
+		<!--微信接口-->
+		<dependency>
+			<groupId>com.github.binarywang</groupId>
+			<artifactId>weixin-java-mp</artifactId>
+			<version>3.5.0</version>
+		</dependency>
+
+		<!--模板引擎-->
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-freemarker</artifactId>
+
+		</dependency>
+
+
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
